...
                .accessibilityLabel("Text Field")
                .padding()
                .background(Color.gray.opacity(0.1))
                .cornerRadius(8)

                // Filter Picker
                Picker("Filter", selection: self.$selectedFilter) {
                    ForEach(TransactionFilter.allCases, id: \.self) { filter in
                        Text(filter.rawValue).tag(filter)
                    }
                }
                .pickerStyle(SegmentedPickerStyle())
            }
...
